--- a/Angular/src/app/homePage/homePage.component.html
+++ b/Angular/src/app/homePage/homePage.component.html
@@ -1,5 +1,44 @@
-<!-- home.component.html -->
-<div class="home-container">
+<!-- <div class="home-container">
 
-    <button routerLink="signUp" class="register-button">להחברות למערכת</button>
+
+    <button routerLink="signIn" class="register-button">להחברות למערכת</button>
+  </div> -->
+
+  <!-- homePage.component.html -->
+<div class="home-container">
+  <div class="wrapper-images">
+    <div class="images-line">
+      <div class="line large" style="background-image:url(../../assets/homePagePhotos/LP.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SB1.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SY2.jpeg)"></div>
+      <div class="line large" style="background-image:url(../../assets/homePagePhotos/LP.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SB1.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SY2.jpeg)"></div>
+     </div>
+    <div class="images-line">
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SB2.jpeg)"></div>
+      <div class="line large" style="background-image:url(../../assets/homePagePhotos/LY.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SP1.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SB2.jpeg)"></div>
+      <div class="line large" style="background-image:url(../../assets/homePagePhotos/LY.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SP1.jpeg)"></div>
+       </div>
+    <div class="images-line">
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SY1.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SP2.jpeg)"></div>
+      <div class="line large" style="background-image:url(../../assets/homePagePhotos/LB.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SY1.jpeg)"></div>
+      <div class="line" style="background-image:url(../../assets/homePagePhotos/SP2.jpeg)"></div>
+      <div class="line large" style="background-image:url(../../assets/homePagePhotos/LB.jpeg)"></div>
+      </div>
   </div>
+  <div class="content-container">
+  <div class="logo">
+    <img src="../../assets/LOGO_SQUARE.png" alt="Your Logo">
+  </div>
+
+  <div class="button-container">
+    <button routerLink="signIn" class="register-button">להתחברות למערכת</button>
+  </div>
+  </div>
+</div>
