--- a/Angular/src/app/signUp/signUp.component.html
+++ b/Angular/src/app/signUp/signUp.component.html
@@ -1,4 +1,10 @@
-<button routerLink="/signUpVolunteer" type="button">רישום כמתנדב</button>
+<!-- <button routerLink="/signUpVolunteer" type="button">רישום כמתנדב</button>
 
-<button routerLink="/signUpPatient" type="button">רישום כחולה</button>
-<button routerLink="/signIn" type="button">כניסה למערכת</button>
+<button routerLink="/signUpPatient" type="button">רישום כחולה</button> -->
+<div class="signup-container">
+    <h2>?בתור מה תרצה/י להרשם</h2>
+    <div class="buttons-group">
+      <button routerLink="/signUpVolunteer" type="button">רישום כמתנדב/ת</button>
+      <button routerLink="/signUpPatient" type="button">רישום כחולה</button>
+    </div>
+  </div>
