--- a/Angular/src/app/about/about.component.html
+++ b/Angular/src/app/about/about.component.html
@@ -1,4 +1,4 @@
-<h1>האתר שלנו מתווך בין מתנדבים לחולים<br/>
+<!-- <!-- <h1>האתר שלנו מתווך בין מתנדבים לחולים<br/>
     כל שעליכם לעשות זה להרשם לאתר<br/>
     אם אתם זקוקים למתנדב - תקבלו את המתנדב שהכי מתאים לכם<br/>
     ואם אתם מעוניינים להתנדב - תקבלו את החולה שהכי מתאים לנתונים שלכם<br/>
@@ -27,4 +27,135 @@
             <img src="../../assets/hospital14.png" alt="בית חולים 14">
             <img src="../../assets/hospital15.png" alt="בית חולים 15">
         </div>
+    </div> -->
+<!-- signUp.component.html 
+<div class="signup-container">
+    <div class="wrapper-images">
+      <div class="images-line">
+        <div class="line large" style="background-image:url(https://images.unsplash.com/photo-1561037404-61cd46aa615b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80)"></div>
+        <div class="line" style="background-image:url(https://images.unsplash.com/photo-1543466835-00a7907e9de1?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1074&q=80)"></div>
+        <div class="line" style="background-image:url(https://images.unsplash.com/photo-1587300003388-59208cc962cb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1470&q=80)"></div>
+      </div>
+      <div class="images-line">
+        <div class="line" style="background-image:url(https://images.unsplash.com/photo-1537151625747-768eb6cf92b2?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=685&q=80)"></div>
+        <div class="line large" style="background-image:url(https://images.unsplash.com/photo-1583512603805-3cc6b41f3edb?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=880&q=80)"></div>
+        <div class="line" style="background-image:url(https://images.unsplash.com/photo-1588943211346-0908a1fb0b01?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=735&q=80)"></div>
+      </div>
+      <div class="images-line">
+        <div class="line" style="background-image:url(https://images.unsplash.com/photo-1583511655826-05700d52f4d9?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=688&q=80)"></div>
+        <div class="line" style="background-image:url(https://images.unsplash.com/photo-1517849845537-4d257902454a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=735&q=80)"></div>
+        <div class="line large" style="background-image:url(https://images.unsplash.com/photo-1534551767192-78b8dd45b51b?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80)"></div>
+      </div>
     </div>
+  
+    <div class="content-container">
+      <div class="logo">
+        <img src="path/to/your/square-logo.png" alt="Your Logo">
+      </div>
+      
+      <div class="text-content">
+        <h1>האתר שלנו מתווך בין מתנדבים לחולים<br>
+            כל שעליכם לעשות זה להרשם לאתר<br>
+            אם אתם זקוקים למתנדב - תקבלו את המתנדב שהכי מתאים לכם<br>
+            ואם אתם מעוניינים להתנדב - תקבלו את החולה שהכי מתאים לנתונים שלכם<br>
+            בהצלחה</h1>
+      </div>
+      
+      <button routerLink="/signUp" class="signup-button">להרשמה</button>
+  
+      <div class="hospitals-section">
+        <h2>חלק מבתי החולים שאיתם אנו מתווכים</h2>
+        <div class="carousel-container">
+          <div class="carousel">
+            <img src="../../assets/hospital1.png" alt="בית חולים 1">
+            <img src="../../assets/hospital2.png" alt="בית חולים 2">
+            <img src="../../assets/hospital3.png" alt="בית חולים 3">
+            <img src="../../assets/hospital4.png" alt="בית חולים 4">
+            <img src="../../assets/hospital5.png" alt="בית חולים 5">
+            <img src="../../assets/hospital6.png" alt="בית חולים 6">
+            <img src="../../assets/hospital7.png" alt="בית חולים 7">
+            <img src="../../assets/hospital8.png" alt="בית חולים 8">
+            <img src="../../assets/hospital9.png" alt="בית חולים 9">
+            <img src="../../assets/hospital10.png" alt="בית חולים 10">
+            <img src="../../assets/hospital11.png" alt="בית חולים 11">
+            <img src="../../assets/hospital12.png" alt="בית חולים 12">
+            <img src="../../assets/hospital13.png" alt="בית חולים 13">
+            <img src="../../assets/hospital14.png" alt="בית חולים 14">
+            <img src="../../assets/hospital15.png" alt="בית חולים 15">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div> -->
+
+  <!-- signUp.component.html -->
+<div class="signup-container">
+    <div class="wrapper-images">
+      <div class="images-line">
+        <div class="line" style="background-image:url(../../assets/hospital1.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital2.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital3.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital4.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital5.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital1.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital2.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital3.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital4.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital5.png)"></div>
+      </div>
+      <div class="images-line">
+        <div class="line" style="background-image:url(../../assets/hospital6.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital7.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital8.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital9.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital10.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital6.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital7.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital8.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital9.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital10.png)"></div>
+      </div>
+      <div class="images-line">
+        <div class="line" style="background-image:url(../../assets/hospital11.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital12.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital13.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital14.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital15.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital11.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital12.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital13.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital14.png)"></div>
+        <div class="line" style="background-image:url(../../assets/hospital15.png)"></div>
+      </div>
+      
+        <div class="images-line">
+          <div class="line" style="background-image:url(../../assets/hospital1.png)"></div>
+          <div class="line" style="background-image:url(../../assets/hospital2.png)"></div>
+          <div class="line" style="background-image:url(../../assets/hospital3.png)"></div>
+          <div class="line" style="background-image:url(../../assets/hospital4.png)"></div>
+          <div class="line" style="background-image:url(../../assets/hospital5.png)"></div>
+          <div class="line" style="background-image:url(../../assets/hospital1.png)"></div>
+          <div class="line" style="background-image:url(../../assets/hospital2.png)"></div>
+          <div class="line" style="background-image:url(../../assets/hospital3.png)"></div>
+          <div class="line" style="background-image:url(../../assets/hospital4.png)"></div>
+          <div class="line" style="background-image:url(../../assets/hospital5.png)"></div>
+        </div><div class="images-line">
+      </div>
+    </div>
+  
+    <div class="content-container">
+      <!-- <div class="logo">
+        <img src="path/to/your/square-logo.png" alt="Your Logo">
+      </div> -->
+      
+      <div class="text-content">
+        <h1>האתר שלנו מתווך בין מתנדבים לחולים<br>
+            כל שעליכם לעשות זה להרשם לאתר<br>
+            אם אתם זקוקים למתנדב - תקבלו את המתנדב שהכי מתאים לכם<br>
+            ואם אתם מעוניינים להתנדב - תקבלו את החולה שהכי מתאים לנתונים שלכם<br>
+            בהצלחה</h1>
+      </div>
+      
+      <button routerLink="/signUp" class="signup-button">להרשמה</button>
+    </div>
+  </div>
