--- a/Angular/src/app/sign-in/sign-in.component.scss
+++ b/Angular/src/app/sign-in/sign-in.component.scss
@@ -168,6 +168,8 @@ html {
     display: flex;
     justify-content: center;
     align-items: center;
+    text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
+
 }
 
 .signIn-wrapper {
@@ -257,8 +259,8 @@ label {
         border: 2px solid #ffffff5d;
         border-radius: 5px;
         color: #ad3573;
-        font-size: 16px;
-        font-family: "form";
+        font-size: 1.5vw;
+        font-family: "bold";
         transition: all 0.3s ease;
         margin-bottom: 20px;
 
@@ -281,13 +283,13 @@ label {
 
 .error-message {
     color: #ff6b6b;
-    font-size: 14px;
+    font-size: 1.5vw;
     margin-top: 2px;
 }
 
 button {
     font-family: "bold", sans-serif;
-    font-size: 18px;
+    font-size: 1.6vw;
     padding: 12px 20px;
     border-radius: 5px;
     cursor: pointer;
@@ -316,18 +318,20 @@ button {
 
 .server-error {
     color: #ff6b6b;
-    font-size: 16px;
+    font-size: 1.6vw;
     margin-bottom: 15px;
     text-align: center;
 }
 
 .signup-link {
-    margin-top: 15px;
+    margin-top: 1.6vw;
     text-align: center;
     
     p {
         margin: 0;
         color: #ad3573;
+        font-size: 1.6vw;
+
     }
     
     a {
@@ -337,7 +341,7 @@ button {
         
         &:hover {
             text-decoration: underline;
-            font-size: 18px;
+            font-size: 1.7vw;
         }
     }
 }
