--- a/Angular/src/app/signUp/signUp.component.html
+++ b/Angular/src/app/signUp/signUp.component.html
@@ -1,10 +1,26 @@
-<!-- <button routerLink="/signUpVolunteer" type="button">רישום כמתנדב</button>
-
-<button routerLink="/signUpPatient" type="button">רישום כחולה</button> -->
+<!-- 
 <div class="signup-container">
     <h2>?בתור מה תרצה/י להרשם</h2>
     <div class="buttons-group">
       <button routerLink="/signUpVolunteer" type="button">רישום כמתנדב/ת</button>
       <button routerLink="/signUpPatient" type="button">רישום כחולה</button>
     </div>
-  </div>
+  </div> -->
+
+  <div class="signup-container">
+    <div class="signup-wrapper">
+        <div class="signup-image-left">
+            <img src="../../assets/User2.png" alt="תמונה שמאלית">
+        </div>
+        <div class="buttons-container">
+            <h2>?בתור מה תרצה/י להרשם</h2>
+            <div class="buttons-group">
+                <button routerLink="/signUpVolunteer" type="button">רישום כמתנדב/ת</button>
+                <button routerLink="/signUpPatient" type="button">רישום כחולה</button>
+            </div>
+        </div>
+        <div class="signup-image-right">
+            <img src="../../assets/User1.png" alt="תמונה ימנית">
+        </div>
+    </div>
+</div>
