--- a/Angular/src/app/signUpVolunteer/sign-up-volunteer.component.scss
+++ b/Angular/src/app/signUpVolunteer/sign-up-volunteer.component.scss
@@ -15,7 +15,7 @@ html {
 }
 
 .signUpVolunteer-body {
-  background-color: #61dafe;
+  background-color: #39c5ef;
   font-family: "bold", sans-serif;
   min-height: 100vh;
   margin: 0;
@@ -23,6 +23,8 @@ html {
   display: flex;
   justify-content: center;
   align-items: center;
+  text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.311);
+
 }
 
 .signUpVolunteer-wrapper {
@@ -80,7 +82,7 @@ form {
       display: block;
       color: #fff;
       cursor: pointer;
-      font-size: 18px;
+      font-size: 1.6vw;
       margin-bottom: 8px;
       text-align: right;
   }
@@ -94,8 +96,8 @@ form {
       border: 2px solid #ffffff5d;
       border-radius: 5px;
       color: #196876;
-      font-size: 16px;
-      font-family: "form";
+      font-size: 1.5vw;
+      font-family: "bold";
       transition: all 0.3s ease;
       margin-bottom: 20px;
 
@@ -149,7 +151,7 @@ form {
 
   .error-message {
       color: #ff6b6b;
-      font-size: 14px;
+      font-size: 1.5vw;
       margin-top: 1px;
   }
 }
