--- a/Angular/src/app/signUpVolunteer/sign-up-volunteer.component.scss
+++ b/Angular/src/app/signUpVolunteer/sign-up-volunteer.component.scss
@@ -17,7 +17,7 @@ html {
 .signUpVolunteer-body {
   background-color: #39c5ef;
   font-family: "bold", sans-serif;
-  min-height: 100vh;
+  min-heiaght: 100vh;
   margin: 0;
   padding: 20px 0;
   display: flex;
