--- a/Angular/src/app/about/about.component.scss
+++ b/Angular/src/app/about/about.component.scss
@@ -1,52 +1,3 @@
-// .signUpButton{
-//     font-size: 30px;
-//     direction: rtl;
-//     margin-right: 25%;
-// }
-// h1{
-//    direction: rtl;
-//    margin-right: 25%; 
-// }
-// body {
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     height: 100vh;
-//     background-color: #f4f4f4;
-//     overflow: hidden;
-// }
-// .carousel-container {
-//     width: 100%;
-//     overflow: hidden;
-//     white-space: nowrap;
-//     position: relative;
-//     background: white;
-//     padding: 10px 0;
-// }
-// .carousel {
-//     display: flex;
-//     animation: scroll 15s linear infinite;
-// }
-// .carousel img {
-//     height: 100px; /* גובה קבוע לכל התמונות */
-//     width: auto; /* שמירה על יחס הגובה-רוחב המקורי */
-//     margin: 0 15px;
-//     transition: transform 0.3s;
-// }
-// .carousel img:hover {
-//     transform: scale(1.1);
-// }
-// @keyframes scroll {
-//     from {
-//         transform: translateX(0);
-//     }
-//     to {
-//         transform: translateX(-50%);
-//     }
-// }
-
-// signUp.component.scss
-// @import url("https://fonts.googleapis.com/css?family=Raleway:400,400i,700");
 
 @font-face {
   font-family: "bold";
@@ -134,6 +85,8 @@
 
 .text-content {
   margin-bottom: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
   text-align: center;
   max-width: 800px;
   background-color: rgba(255, 255, 255, 0.3);
