--- a/Angular/src/app/sign-in/sign-in.component.html
+++ b/Angular/src/app/sign-in/sign-in.component.html
@@ -1,55 +1,4 @@
-<!-- 
-<body class="signIn-body">
-    <div class="signIn-container">
-        <form class="login-form" #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)">
-            <h2 class="signIn-head">התחברות</h2>
-            
-            <div class="input-group-in">
-                <label for="email">:כתובת אימייל</label>
-                <input 
-                    type="email" 
-                    id="email" 
-                    name="email" 
-                    [(ngModel)]="email" 
-                    #emailControl="ngModel"
-                    placeholder="הכנס כתובת אימייל" 
-                    required 
-                    email>
-                <div class="error-message" *ngIf="emailControl.invalid && (emailControl.dirty || emailControl.touched)">
-                    <span *ngIf="emailControl.errors?.['required']">שדה זה נדרש</span>
-                    <span *ngIf="emailControl.errors?.['email']">כתובת אימייל לא תקינה</span>
-                </div>
-            </div>
 
-            <div class="input-group-in">
-                <label for="password">:סיסמה</label>
-                <input 
-                    type="password" 
-                    id="password" 
-                    name="password" 
-                    [(ngModel)]="password" 
-                    #passwordControl="ngModel"
-                    placeholder="הכנס סיסמה" 
-                    required 
-                    passwordStrength>
-                <div class="error-message" *ngIf="passwordControl.invalid && (passwordControl.dirty || passwordControl.touched)">
-                    <span *ngIf="passwordControl.errors?.['required']">שדה זה נדרש</span>
-                    <span *ngIf="passwordControl.errors?.['passwordStrength']">
-                        הסיסמה חייבת לכלול לפחות 8 תווים, אות גדולה, אות קטנה, מספר ותו מיוחד (!#$%^&*)
-                    </span>
-                </div>
-            </div>
-
-            <div class="error-message server-error" *ngIf="errorMessage">{{ errorMessage }}</div>
-
-            <button type="submit" [disabled]="loginForm.invalid">התחבר</button>
-        </form>   
-         <div class="signup-link">
-        <p>אין לך חשבון? <a routerLink="/signUp">הירשם כאן</a></p>
-    </div>
-    </div>
-
-</body> -->
 
 <body class="signIn-body">
     <div class="signIn-wrapper">
@@ -91,7 +40,7 @@
                     <div class="error-message" *ngIf="passwordControl.invalid && (passwordControl.dirty || passwordControl.touched)">
                         <span *ngIf="passwordControl.errors?.['required']">שדה זה נדרש</span>
                         <span *ngIf="passwordControl.errors?.['passwordStrength']">
-                            הסיסמה חייבת לכלול לפחות 8 תווים, אות גדולה, אות קטנה, מספר ותו מיוחד (!#$%^&*)
+                            הסיסמה חייבת להכיל לפחות 8 תווים, אות גדולה, אות קטנה ומספר 
                         </span>
                     </div>
                 </div>
