--- a/Angular/src/app/signUpVolunteer/sign-up-volunteer.component.html
+++ b/Angular/src/app/signUpVolunteer/sign-up-volunteer.component.html
@@ -21,7 +21,7 @@
           <div *ngIf="signUpForm.get('password')?.invalid && (signUpForm.get('password')?.dirty || signUpForm.get('password')?.touched)" class="error-message">
             <div *ngIf="signUpForm.get('password')?.errors?.['required']">סיסמה נדרשת</div>
             <div *ngIf="signUpForm.get('password')?.errors?.['passwordStrength']">
-              הסיסמה חייבת להכיל לפחות 8 תווים, אות גדולה, אות קטנה, מספר ותו מיוחד (!#$%^&*)
+              הסיסמה חייבת להכיל לפחות 8 תווים, אות גדולה, אות קטנה ומספר 
             </div>
           </div>
         </div>
